broadcaster cells are empty, fdo#54553

Change-Id: Ie7c251b7eaee248c97f4f931175bc26539acb22a